--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <p>We started this company because people, our friends and families, kept asking for help and advice.  Over and over we heard that the world had become an overwhelming mess of choice, where the abundance of availablity led to action pralysis.  helpful.af is our way of formalizing our relationship with you, communicating all the things we do best, and demonstrating a small sample of our talent.</p>
             </li>
             <li class="col-6-12 left ae-6 fromLeft">
-              <p>The most important first step is communicating with each other.  What does your company do well, why do you want change?  Are you looking to be empowered or do you just want the work done with?  We go both way: assuming the roles of both labor and/or teacher, at your discretion.  Lead us to your problems, and we will lead you from them.</p>
+              <p>The most important first step is communicating with each other.  What does your company do well, why do you want change?  Are you looking to be empowered or do you just want the work done with?  We go both way: assuming the roles of both laborer and/or teacher, at your discretion.  Lead us to your problems, and we will lead you from them.</p>
             </li>
           </ul>
         </div>
